tests/baselines/reference/parserIndexSignature5(strict=true).errors.txt
parserIndexSignature5.ts(2,3): error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
parserIndexSignature5.ts(2,3): error TS7008: Member '[a]' implicitly has an 'any' type.
parserIndexSignature5.ts(2,4): error TS2304: Cannot find name 'a'.


==== parserIndexSignature5.ts (3 errors) ====
    interface I {
      [a] // Used to be indexer, now it is a computed property
      ~~~
!!! error TS1169: A computed property name in an interface must refer to an expression whose type is a literal type or a 'unique symbol' type.
      ~~~
!!! error TS7008: Member '[a]' implicitly has an 'any' type.
       ~
!!! error TS2304: Cannot find name 'a'.
    }